<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/option_aon"
        android:title="@string/game_aon"
        app:showAsAction="never" />
    <item
        android:id="@+id/option_cf"
        android:title="@string/game_cf"
        app:showAsAction="never" />
    <item
        android:id="@+id/option_df"
        android:title="@string/game_df"
        app:showAsAction="never" />
    <item
        android:id="@+id/option_lt"
        android:title="@string/game_lt"
        app:showAsAction="never" />
    <item
        android:id="@+id/option_mm"
        android:title="@string/game_mm"
        app:showAsAction="never" />
    <item
        android:id="@+id/option_pb"
        android:title="@string/game_pb"
        app:showAsAction="never" />
    <item
        android:id="@+id/option_pt"
        android:title="@string/game_pt"
        app:showAsAction="never" />
    <item
        android:id="@+id/option_tt"
        android:title="@string/game_tt"
        app:showAsAction="never" />
</menu>